syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "net.rickiekarp.homeassistant.domain";
option java_outer_classname = "ShoppingNoteProtos";
option java_multiple_files = true;

message ShoppingNote {
    int32 id = 1;
    string title = 2;
    double price = 3;
    int32 user_id = 4;
    google.protobuf.Timestamp dateBought = 5;
    int32 store_id = 6;
    google.protobuf.Timestamp dateAdded = 7;
    google.protobuf.Timestamp lastUpdated = 8;
}

message ShoppingNoteList {
    repeated ShoppingNote note = 1;
}
