syntax = "proto3";

option java_package = "net.rickiekarp.homeserver.domain";
option java_outer_classname = "ShoppingStoreProtos";
option java_multiple_files = true;

message ShoppingStore {
    int32 id = 1;
    string name = 2;
}

message ShoppingStoreList {
    repeated ShoppingStore store = 1;
}
